--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "tokopedia-pokemon-app",
+  "name": "pokemon-app-graphql-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.4.15",
     "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,6 +15,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "use-persisted-state-hook": "^1.0.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@emotion/babel-plugin": "^11.3.0"
   }
 }
