--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "^15.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.17.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "use-persisted-state-hook": "^1.0.1",
